--- a/StartTool/MainWindow.xaml
+++ b/StartTool/MainWindow.xaml
@@ -30,5 +30,7 @@
         <Button Click="Button_Click_2" Content="禁止边缘滑动" Height="20" Width="100" Canvas.Left="80" Canvas.Top="280"></Button>
         <Button Click="Button_Click_1" Content="设置此程序为开机启动" Height="20" Width="140" Canvas.Left="60" Canvas.Top="310"></Button>
 
+        <!--<Button Click="Button_Click_3" Content="删除配置文件" Height="20" Width="100" Canvas.Left="80" Canvas.Top="340"></Button>-->
+
     </Canvas>
 </Window>
